# TerminalFighter

./: .dockerignore  .fuse_hidden0000001f0000000b  .fuse_hidden0000002000000002  .gitignore  .travis.yml  CMakeLists.txt  DesignDoc.adoc  Dockerfile  Doxyfile  Doxyfile.patch  Makefile  Pipfile  README.adoc  README.md  TerminalFighter  american-english.txt  astylerc  autoturret.py  basic_enemy.py  basic_grunt.py  build.sh  destroy_listener.py  docker_build.sh  format-all.sh  gameboard.py  gamemaster.py  gameobject.py  highscore_service.py  homing_missiles.py  homing_missles.py  identification_assigner.py  installer.sh  main.py  main_menu.py  maincharacter.py  make-all  make-all.sh  menu.py  not_so_basic_grunt.py  rifle.py  (+10 more)
assets/: dictionary.txt
assets/images/: credits.txt
assets/images/effects/fireball/: read_me.txt
assets/terminal/: credits.txt  futureui1.xcf
config/: asset_paths.yml  video_settings.yml
config.example/: asset_paths.yml  main_menu.yml  video_settings.yml
documentation/: Doxyfile.patch  build-docs.sh  doxygen-build.sh
installer/: installer.sh
profile/: README.md  terminalfighter_1588373774.prof  terminalfighter_baseline.prof
src/: BasicEnemy.cpp  BasicEnemy.h  CMakeLists.txt  CollisionDetector.cpp  CollisionDetector.h  Delay.cpp  Delay.h  DrawRequest.cpp  DrawRequest.h  Events.cpp  Events.h  EventsListener.h  GameConstants.h  GameObject.cpp  GameObject.h  GameObjectMediator.cpp  GameObjectMediator.h  GraphicsHandler.cpp  GraphicsHandler.h  Hitbox.cpp  Hitbox.h  I_CollisionDetector.h  I_DrawRequest.h  I_GameObjectMediator.h  I_GraphicsHandler.h  I_Hitbox.h  I_Universe.h  I_collision_detector.h  I_game_object_mediator.h  I_gamestate.h  I_universe.h  Keyboard.cpp  Keyboard.h  KeyboardListener.h  MainCharacter.cpp  MainCharacter.h  MenuState.h  Missile.cpp  Missile.h  MissileLauncher.cpp  (+52 more)
src/Engine/: CMakeLists.txt  CollisionDetector.cpp  GameObjectMediator.h  GamestateHandler.cpp  GraphicsHandler.cpp  I_CollisionDetector.h  I_GameObjectMediator.h  I_GraphicsHandler.h  I_Updatable.h  KeyboardListener.h  Universe.cpp
src/Engine/Animator/: Animator.cpp  Animator.h
src/Engine/AudioHandler/: AudioHandler.cpp  AudioHandler.h  I_AudioHandler.h
src/Engine/CollisionDetector/: CollisionDetector.cpp  CollisionDetector.h  DestroyedListener.h  I_CollisionDetector.h
src/Engine/Delay/: Delay.cpp  Delay.h
src/Engine/DrawRequest/: DrawRequest.cpp  DrawRequest.h
src/Engine/Events/: Events.h  EventsListener.h
src/Engine/GameObject/: GameObject.cpp  GameObject.h
src/Engine/GameObjectMediator/: GameObjectMediator.cpp  GameObjectMediator.h  I_GameObjectMediator.h
src/Engine/GameState/: I_GameState.h
src/Engine/GameStateHandler/: GameStateHandler.cpp  GameStateHandler.h
src/Engine/GraphicsHandler/: GraphicsHandler.cpp  GraphicsHandler.h  I_GraphicsHandler.h
src/Engine/Hitbox/: Hitbox.cpp  Hitbox.h  I_Hitbox.h
src/Engine/JN_Rect/: JN_Rect.h
src/Engine/JN_TTF/: JN_TTF.cpp  JN_TTF.h
src/Engine/Jn_Ttf/: Jn_Ttf.cpp  Jn_Ttf.h
src/Engine/Keyboard/: Keyboard.cpp  Keyboard.h
src/Engine/Rect/: Rect.h
src/Engine/Settings/: I_Settings.h  Settings.cpp  Settings.h
src/Engine/SpriteAnimator/: SpriteAnimator.cpp  SpriteAnimator.h
src/Engine/Team/: Team.h
src/Engine/Universe/: I_Universe.h  Universe.cpp  Universe.h
src/Engine/Util/: Util.cpp  Util.h
src/TerminalFighter/: CMakeLists.txt  main.cpp
src/TerminalFighter/BasicEnemy/: BasicEnemy.cpp  BasicEnemy.h
src/TerminalFighter/GameConstants/: GameConstants.h
src/TerminalFighter/MainCharacter/: MainCharacter.cpp  MainCharacter.h
src/TerminalFighter/MainMenu/: MainMenu.cpp  MainMenu.h
src/TerminalFighter/MenuState/: MenuState.cpp  MenuState.h
src/TerminalFighter/Missile/: Missile.cpp  Missile.h
src/TerminalFighter/MissileLauncher/: MissileLauncher.cpp  MissileLauncher.h
src/TerminalFighter/Settings/: I_Settings.h  Settings.cpp  Settings.h
src/TerminalFighter/TF_Colors/: TF_Colors.h
src/TerminalFighter/TF_Colours/: TF_Colours.h
src/TerminalFighter/TargetingSystem/: TargetingSystem.cpp  TargetingSystem.h
src/TerminalFighter/Terminal/: Terminal.cpp  Terminal.h
src/TerminalFighter/TestState/: TestState.cpp  TestState.h
src/TerminalFighter/TextArea/: I_TextArea.h  TextArea.cpp  TextArea.h
src/TerminalFighter/Title/: Title.cpp  Title.h
src/gamestates/: CMakeLists.txt  GamestateHandler.cpp  GamestateHandler.cpp.orig  GamestateHandler.h  GamestateHandler.h.orig  I_Gamestate.h  MenuState.cpp  MenuState.cpp.orig  MenuState.h  MenuState.h.orig  TestState.cpp  TestState.cpp.orig  TestState.h  gamestate_handler.cpp  gamestate_handler.h  menu_state.cpp  menu_state.h  test_state.cpp  test_state.h
test/: CMakeLists.txt  CollisionDetectorTest.cpp  GameObjectTest.cpp  GameStateHandlertest.cpp  HitboxTest.cpp  KeyboardListenerTest.cpp  Makefile  MissileLauncherTest.cpp  README.adoc  SettingsTest.cpp  TerminalListenerTest.cpp  TestAll.cpp  UniverseTest.cpp  UtilTest.cpp  run-tests  test.yml
test/mocks/: MockGameObject.h  MockGameObjectMediator.h  MockGameState.h  MockGraphicsHandler.h  MockHitbox.h  MockKeyboardListener.h  MockTerminalListener.h  MockUpdatable.h
test/src/: CollisionDetectorTest.cpp  GameObjectTest.cpp  GameStateHandlertest.cpp  HitboxTest.cpp  KeyboardListenerTest.cpp  MissileLauncherTest.cpp  UniverseTest.cpp  gameobject_test.cpp  gamestate_handler_test.cpp  hitbox_test.cpp  keyboard_listener_test.cpp  missle_launcher_test.cpp
test/src/mocks/: MockGameObject.h  MockGameObjectMediator.h  MockGameState.h  MockGraphicsHandler.h  MockHitbox.h  MockKeyboardListener.h  MockUpdatable.h  mock_gameobject.h  mock_gamestate.h  mock_keyboard_listener.h  mock_missile_launcher_listener.h  mock_projectile_creator_listener.h
