add_library(BasicEnemy BasicEnemy.cpp)
add_library(CollisionDetector CollisionDetector.cpp)
add_library(Delay Delay.cpp)
add_library(DrawRequest DrawRequest.cpp)
add_library(Events Events.cpp)
add_library(GameObject GameObject.cpp)
add_library(GameObjectMediator GameObjectMediator.cpp)
add_library(GraphicsHandler GraphicsHandler.cpp)
add_library(Hitbox Hitbox.cpp)
add_library(Keyboard Keyboard.cpp)
add_library(MainCharacter MainCharacter.cpp)
add_library(Missile Missile.cpp)
add_library(MissileLauncher MissileLauncher.cpp)
add_library(Universe Universe.cpp)
add_library(Terminal Terminal.cpp)
add_library(TargetingSystem TargetingSystem.cpp)

target_link_libraries(BasicEnemy Hitbox)
target_link_libraries(CollisionDetector Hitbox)
target_link_libraries(Delay ${SDL2_LIBRARIES})
target_link_libraries(GraphicsHandler DrawRequest ${SDL2IMAGE_LIBRARIES})
target_link_libraries(MainCharacter ${SDL2_LIBRARIES})
target_link_libraries(Missile ${SDL2_LIBRARIES} GraphicsHandler GameObject)
target_link_libraries(MissileLauncher GameObjectMediator Missile TargetingSystem)
target_link_libraries(Universe GraphicsHandler GameObject)
target_link_libraries(Terminal ${SDL2_LIBRARIES} ${SDL2_TTF_LIBRARIES} GameObject Hitbox GraphicsHandler)
target_link_libraries(TargetingSystem GameObject)


add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES}
    ${SDL2_TTF_LIBRARIES} TestState MenuState GamestateHandler)

add_subdirectory(gamestates)
